# tidb-autoid

./: LICENSE  README.md  _env.playground  pyproject.toml
dummy_data/: autoid_info.sql
src/tidb_autoid/: __init__.py  autoid_info.py  config.py
